engine/tests/fixtures/invalid/ui/actor-user.tg
actor actor_user {
  name "User"
  description "Fixture actor for invalid UI tests"

  status active
}
